* Aware of errors and not buildable construction due to considerations upon architecture *

--- a/examples/Microservices/Example/Example.Api/Example.Api.csproj
+++ b/examples/Microservices/Example/Example.Api/Example.Api.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\src\Shared\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Example.Infrastructure\Example.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
