--- a/examples/Microservices/Example/Example.Api/Example.Api.csproj
+++ b/examples/Microservices/Example/Example.Api/Example.Api.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.13" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.13" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.2.0" />
