--- a/src/BuildingBlocks/Moser.BuildingBlocks.API/Moser.BuildingBlocks.API.csproj
+++ b/src/BuildingBlocks/Moser.BuildingBlocks.API/Moser.BuildingBlocks.API.csproj
@@ -2,13 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Middleware\" />
-    <Folder Include="Filters\" />
-  </ItemGroup>
 
 </Project>
