--- a/src/BuildingBlocks/Moser.BuildingBlocks.Infrastructure/Moser.BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks/Moser.BuildingBlocks.Infrastructure/Moser.BuildingBlocks.Infrastructure.csproj
@@ -2,12 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="AggregatesModel\CategoryAggregate\" />
-  </ItemGroup>
 
 </Project>
