--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Orchestration\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
