--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,7 +2,7 @@ name: Build and Test
 
 on:
   push:
-    branches: [main]
+    branches: [ main, develop ]
 
 jobs:
   build:
@@ -15,17 +15,17 @@ jobs:
         with:
           fetch-depth: 0 
 
-      - name: Setup .NET SDK
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '10.0.x'
           cache: true 
 
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Build solution
+      - name: Build
         run: dotnet build --no-restore --configuration Release
 
-      - name: Run tests
+      - name: Test
         run: dotnet test --no-build --configuration Release --verbosity normal
