--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -22,7 +22,7 @@ jobs:
           cache: true 
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore --verbosity:detailed
 
       - name: Build
         run: dotnet build --no-restore --configuration Release
