Reduces log during dotnet restore

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -22,7 +22,7 @@ jobs:
           cache: false 
 
       - name: Restore dependencies
-        run: dotnet restore --verbosity:detailed
+        run: dotnet restore
 
       - name: Build
         run: dotnet build --no-restore --configuration Release
